exports[`MapHex #toString() returns the SVG for this element 1`] = `
<svg
  className="hex"
  onClick={[Function]}
  x={554.2562584220407}
  y={384}>
  <polygon
    fill="#efe"
    points="0,32 55.42562584220407,0 110.85125168440814,32 110.85125168440814,96 55.42562584220407,128 0,96"
    stroke="black" />
</svg>
`;

exports[`MapHex #toString() when it contains a tile draws the tile at the end 1`] = `
<svg
  className="hex"
  onClick={[Function]}
  x={554.2562584220407}
  y={384}>
  <polygon
    fill="#efe"
    points="0,32 55.42562584220407,0 110.85125168440814,32 110.85125168440814,96 55.42562584220407,128 0,96"
    stroke="black" />
  <svg
    height={128}
    width={110.85125168440814}
    xmlns="http://www.w3.org/2000/svg">
    <polygon
      fill="yellow"
      points="55.42562584220407,0 110.85125168440814,32 110.85125168440814,96 55.42562584220407,128 0,96 0,32" />
  </svg>
</svg>
`;

exports[`MapHex #toString() when it contains some elements draws the tile at the end 1`] = `
<svg
  className="hex"
  onClick={[Function]}
  x={554.2562584220407}
  y={384}>
  <polygon
    fill="#efe"
    points="0,32 55.42562584220407,0 110.85125168440814,32 110.85125168440814,96 55.42562584220407,128 0,96"
    stroke="black" />
  ELEMENT
</svg>
`;
